   * Added `configure` script options for 'libregex' tuning, just so that one
     is on par with our other optional dependencies. [#3140]
   * Changed `--enable-extapi-enphase` to not default to `auto` and then get
     installed on every system capable of using it; this is a niche capability
     for users of specific devices via a cloud portal. [follow-up to PR #2813
     for issue #2807]

 - Recipes, CI and helper script updates not classified above:
   * Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
     include the source distribution (was posted for NUT v2.8.1 and v2.8.2
     tagged releases, but absent for v2.8.3 and v2.8.4). [#3056]
   * Updated `make spellcheck` to help avoid asciidoc admonition blocks with
     visually invalid sentences (after rendering as a box in HTML or PDF).
     [#3077]
   * Added a `make dist-docs` goal to generate, collect and tarball all
     document types (`man`, `html-single`, `html-chunked`, `pdf`) that we
     may have enabled for the current build configuration and available
     tooling. [#1400]
   * Further developer workflow speedup with `make spellcheck-interactive-quick`
     which should now not re-check source texts that were okay with the previous
     dictionary contents, in case some new terms have to be added. [PRs #3186,
     #2871]
   * Introduced `make distcheck-completeness` goal to verify that our
     distribution archives can exactly reproduce themselves. [#2829]
   * Added a GitHub Actions CI job to generate, upload and recycle `make dist`
     and `make dist-docs` tarballs so they are easier to obtain for people and
     other CI systems (which might not want to follow a Git repository). Links
     to these artifacts can be seen in workflow page (or its logs), and added
     as a line in GitHub Checks list associated with a commit. Note that the
     GitHub Action storage keeps artifacts for at most 90 days. [#1400, #2829]