@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3648 utf-8
+personal_ws-1.1 en 3649 utf-8
 AAC
 AAS
 ABI
@@ -2990,6 +2990,7 @@ rc
 rcctl
 readline
 readonly
+realpath
 realpower
 realups
 rebase
