@@ -423,6 +423,9 @@ several `FSD` notifications into one executed action. [PR #3097]
      installed on every system capable of using it; this is a niche capability
      for users of specific devices via a cloud portal. [follow-up to PR #2813
      for issue #2807]
+   * Fixed `m4/ax_realpath_lib.m4` up with more ways to try and gauge the
+     build-time library name from linker/compiler, to improve the chances
+     that `nut-scanner` would find them. [#3293]
 
  - Recipes, CI and helper script updates not classified above:
    * Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
